--- a/index.html
+++ b/index.html
@@ -38,6 +38,36 @@
             <button class="intro__btn">Create your plan</button>
           </div>
         </div>
+
+        <div class="collection">
+          <div class="collection__card">
+            <img src="./img/packet.png" alt="" class="collection__img" />
+            <h4 class="collection__title">Gran Espresso</h4>
+            <p class="collection__text">
+              Light and flavorful blend with cocoa and black pepper for an
+              intense experience
+            </p>
+          </div>
+          <div class="collection__card">
+            <img src="./img/packet.png" alt="" class="collection__img" />
+            <h4 class="collection__title">Planalto</h4>
+            <p class="collection__text">
+              Brazilian dark roast with rich and velvety body, and hints of fruits and nuts
+            </p>
+          </div>    <div class="collection__card">
+            <img src="./img/packet.png" alt="" class="collection__img" />
+            <h4 class="collection__title">Piccollo</h4>
+            <p class="collection__text">
+              Mild and smooth blend featuring notes of toasted almond and dried cherry
+            </p>
+          </div>    <div class="collection__card">
+            <img src="./img/packet.png" alt="" class="collection__img" />
+            <h4 class="collection__title">Danche</h4>
+            <p class="collection__text">
+              Ethiopian hand-harvested blend densely packed with vibrant fruit notes
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
