--- a/index.html
+++ b/index.html
@@ -52,20 +52,62 @@
             <img src="./img/packet.png" alt="" class="collection__img" />
             <h4 class="collection__title">Planalto</h4>
             <p class="collection__text">
-              Brazilian dark roast with rich and velvety body, and hints of fruits and nuts
+              Brazilian dark roast with rich and velvety body, and hints of
+              fruits and nuts
             </p>
-          </div>    <div class="collection__card">
+          </div>
+          <div class="collection__card">
             <img src="./img/packet.png" alt="" class="collection__img" />
             <h4 class="collection__title">Piccollo</h4>
             <p class="collection__text">
-              Mild and smooth blend featuring notes of toasted almond and dried cherry
+              Mild and smooth blend featuring notes of toasted almond and dried
+              cherry
             </p>
-          </div>    <div class="collection__card">
+          </div>
+          <div class="collection__card">
             <img src="./img/packet.png" alt="" class="collection__img" />
             <h4 class="collection__title">Danche</h4>
             <p class="collection__text">
-              Ethiopian hand-harvested blend densely packed with vibrant fruit notes
+              Ethiopian hand-harvested blend densely packed with vibrant fruit
+              notes
             </p>
+          </div>
+        </div>
+
+        <div class="choose">
+          <h2 class="choose__title">Why choose us?</h2>
+          <p class="choose__text">
+            A large part of our role is choosing which particular coffees will
+            be featured in our range. This means working closely with the best
+            coffee growers to give you a more impactful experience on every
+            level.
+          </p>
+
+          <div class="choose__cards">
+            <div class="choose__card">
+              <img src="./img/coffee-bean.png" alt="" class="choose__img" />
+              <h3 class="choose__subtitle">Best quality</h3>
+              <p class="choose__subtext">
+                Discover an endless variety of the world’s best artisan coffee
+                from each of our roasters.
+              </p>
+            </div>
+            <div class="choose__card">
+              <img src="./img/coffee-bean.png" alt="" class="choose__img" />
+              <h3 class="choose__subtitle">Exclusive benefits</h3>
+              <p class="choose__subtext">
+                Special offers and swag when you subscribe, including 30% off
+                your first shipment.
+              </p>
+            </div>
+            <div class="choose__card">
+              <img src="./img/coffee-bean.png" alt="" class="choose__img" />
+              <h3 class="choose__subtitle">Free shipping</h3>
+              <p class="choose__subtext">
+                We cover the cost and coffee is delivered fast. Peak freshness:
+                guaranteed.
+              </p>
+            </div>
           </div>
         </div>
       </div>
