--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
               <a href="#" class="navbar__link">Create your plan</a>
             </li>
           </ul>
+
+          <div class="navbar__burger">
+            <hr class="navbar__hr">
+            <hr class="navbar__hr">
+            <hr class="navbar__hr">
+          </div>
         </nav>
 
         <div class="intro">
@@ -74,7 +80,7 @@
           </div>
         </div>
 
-        <div class="choose">
+         <div class="choose">
           <h2 class="choose__title">Why choose us?</h2>
           <p class="choose__text">
             A large part of our role is choosing which particular coffees will
@@ -109,7 +115,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </div> 
       </div>
     </div>
   </body>
