--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           </ul>
 
           <div class="navbar__burger">
-            <hr class="navbar__hr">
-            <hr class="navbar__hr">
-            <hr class="navbar__hr">
+            <hr class="navbar__hr" />
+            <hr class="navbar__hr" />
+            <hr class="navbar__hr" />
           </div>
         </nav>
 
@@ -80,7 +80,7 @@
           </div>
         </div>
 
-         <div class="choose">
+        <div class="choose">
           <h2 class="choose__title">Why choose us?</h2>
           <p class="choose__text">
             A large part of our role is choosing which particular coffees will
@@ -115,7 +115,51 @@
               </p>
             </div>
           </div>
-        </div> 
+        </div>
+
+        <div class="works">
+          <h3 class="works__maintitle">How it works</h3>
+
+          <div class="works__sircle">
+            <span class="works__box"></span>
+            <hr class="works__hr" />
+            <span class="works__box"></span>
+            <hr class="works__hr" />
+            <span class="works__box"></span>
+          </div>
+
+          <div class="works__cards">
+            <div class="works__card">
+              <h1 class="works__title">01</h1>
+              <h3 class="works__subtitle">Pick your coffee</h3>
+              <p class="works__text">
+                Select from our evolving range of artisan coffees. Our beans are
+                ethically sourced and we pay fair prices for them. There are new
+                coffees in all profiles every month for you to try out.
+              </p>
+            </div>
+            <div class="works__card">
+              <h1 class="works__title">02</h1>
+              <h3 class="works__subtitle">Choose the frequency</h3>
+              <p class="works__text">
+                Customize your order frequency, quantity, even your roast style
+                and grind type. Pause, skip or cancel your subscription with no
+                commitment through our online portal.
+              </p>
+            </div>
+            <div class="works__card">
+              <h1 class="works__title">03</h1>
+              <h3 class="works__subtitle">Receive and enjoy!</h3>
+              <p class="works__text">
+                We ship your package within 48 hours, freshly roasted. Sit back
+                and enjoy award-winning world-class coffees curated to provide a
+                distinct tasting experience.
+              </p>
+            </div>
+          </div>
+
+          <button class="works__btn">Create your plan</button>
+        </div>
       </div>
     </div>
   </body>
