--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <a href="#" class="navbar__link">Home</a>
             </li>
             <li class="navbar__item">
-              <a href="#" class="navbar__link">About</a>
+              <a href="./about.html" class="navbar__link">About</a>
             </li>
             <li class="navbar__item">
               <a href="#" class="navbar__link">Create your plan</a>
@@ -48,35 +48,43 @@
         <div class="collection">
           <div class="collection__card">
             <img src="./img/packet.png" alt="" class="collection__img" />
-            <h4 class="collection__title">Gran Espresso</h4>
-            <p class="collection__text">
-              Light and flavorful blend with cocoa and black pepper for an
-              intense experience
-            </p>
+            <div class="collection__cardbox">
+              <h4 class="collection__title">Gran Espresso</h4>
+              <p class="collection__text">
+                Light and flavorful blend with cocoa and black pepper for an
+                intense experience
+              </p>
+            </div>
           </div>
           <div class="collection__card">
             <img src="./img/packet.png" alt="" class="collection__img" />
-            <h4 class="collection__title">Planalto</h4>
-            <p class="collection__text">
-              Brazilian dark roast with rich and velvety body, and hints of
-              fruits and nuts
-            </p>
+            <div class="collection__cardbox">
+              <h4 class="collection__title">Gran Espresso</h4>
+              <p class="collection__text">
+                Light and flavorful blend with cocoa and black pepper for an
+                intense experience
+              </p>
+            </div>
           </div>
           <div class="collection__card">
             <img src="./img/packet.png" alt="" class="collection__img" />
-            <h4 class="collection__title">Piccollo</h4>
-            <p class="collection__text">
-              Mild and smooth blend featuring notes of toasted almond and dried
-              cherry
-            </p>
+            <div class="collection__cardbox">
+              <h4 class="collection__title">Gran Espresso</h4>
+              <p class="collection__text">
+                Light and flavorful blend with cocoa and black pepper for an
+                intense experience
+              </p>
+            </div>
           </div>
           <div class="collection__card">
             <img src="./img/packet.png" alt="" class="collection__img" />
-            <h4 class="collection__title">Danche</h4>
-            <p class="collection__text">
-              Ethiopian hand-harvested blend densely packed with vibrant fruit
-              notes
-            </p>
+            <div class="collection__cardbox">
+              <h4 class="collection__title">Gran Espresso</h4>
+              <p class="collection__text">
+                Light and flavorful blend with cocoa and black pepper for an
+                intense experience
+              </p>
+            </div>
           </div>
         </div>
 
@@ -92,27 +100,33 @@
           <div class="choose__cards">
             <div class="choose__card">
               <img src="./img/coffee-bean.png" alt="" class="choose__img" />
-              <h3 class="choose__subtitle">Best quality</h3>
-              <p class="choose__subtext">
-                Discover an endless variety of the world’s best artisan coffee
-                from each of our roasters.
-              </p>
+              <div class="choose__box">
+                <h3 class="choose__subtitle">Best quality</h3>
+                <p class="choose__subtext">
+                  Discover an endless variety of the world’s best artisan coffee
+                  from each of our roasters.
+                </p>
+              </div>
             </div>
             <div class="choose__card">
               <img src="./img/coffee-bean.png" alt="" class="choose__img" />
-              <h3 class="choose__subtitle">Exclusive benefits</h3>
-              <p class="choose__subtext">
-                Special offers and swag when you subscribe, including 30% off
-                your first shipment.
-              </p>
+              <div class="choose__box">
+                <h3 class="choose__subtitle">Best quality</h3>
+                <p class="choose__subtext">
+                  Discover an endless variety of the world’s best artisan coffee
+                  from each of our roasters.
+                </p>
+              </div>
             </div>
             <div class="choose__card">
               <img src="./img/coffee-bean.png" alt="" class="choose__img" />
-              <h3 class="choose__subtitle">Free shipping</h3>
-              <p class="choose__subtext">
-                We cover the cost and coffee is delivered fast. Peak freshness:
-                guaranteed.
-              </p>
+              <div class="choose__box">
+                <h3 class="choose__subtitle">Best quality</h3>
+                <p class="choose__subtext">
+                  Discover an endless variety of the world’s best artisan coffee
+                  from each of our roasters.
+                </p>
+              </div>
             </div>
           </div>
         </div>
