--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <a href="#" class="footer__link">Home</a>
             </li>
             <li class="footer__item">
-              <a href="#" class="footer__link">ABOUT US</a>
+              <a href="./about.html" class="footer__link">ABOUT US</a>
             </li>
             <li class="footer__item">
               <a href="#" class="footer__link">Create your plan</a>
