--- a/about.html
+++ b/about.html
@@ -22,7 +22,9 @@
               <a href="#" class="navbar__link">About</a>
             </li>
             <li class="navbar__item">
-              <a href="#" class="navbar__link">Create your plan</a>
+              <a href="./complated.html" class="navbar__link"
+                >Create your plan</a
+              >
             </li>
           </ul>
 
