--- a/about.html
+++ b/about.html
@@ -131,13 +131,15 @@
           <img src="./img/footerLogo.png" alt="" class="footer__logo" />
           <ul class="footer__list">
             <li class="footer__item">
-              <a href="#" class="footer__link">Home</a>
+              <a href="./index.html" class="footer__link">Home</a>
             </li>
             <li class="footer__item">
               <a href="#" class="footer__link">ABOUT US</a>
             </li>
             <li class="footer__item">
-              <a href="#" class="footer__link">Create your plan</a>
+              <a href="./complated.html" class="footer__link"
+                >Create your plan</a
+              >
             </li>
           </ul>
 
