--- a/complated.html
+++ b/complated.html
@@ -295,7 +295,7 @@
           <img src="./img/footerLogo.png" alt="" class="footer__logo" />
           <ul class="footer__list">
             <li class="footer__item">
-              <a href="#" class="footer__link">Home</a>
+              <a href="./index.html" class="footer__link">Home</a>
             </li>
             <li class="footer__item">
               <a href="./about.html" class="footer__link">ABOUT US</a>
